test/arrays/diten/arrayFrontOOB.good
arrayFrontOOB.chpl:3: error: halt reached - first called on an empty array
